# serotonin-script

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
backend/agents/: medical_writer.py
backend/agents/prompts/: fact_check_prompts.py  style_templates.py  system_prompts.py
backend/agents/tools/: __init__.py  fact_verify.py  pubmed_search.py  style_lookup.py
backend/api/: dependencies.py  main.py
backend/api/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py
backend/config/: lexicon.py  settings.py  system_prompts.py
backend/models/: db_models.py  enums.py  schemas.py
backend/repositories/: draft_repository.py  feedback_repository.py  post_repository.py
backend/services/: content_generator.py  draft_service.py  exceptions.py  fact_checker.py  publisher_service.py  style_matcher.py
backend/tests/: conftest.py
backend/utils/: logging.py
backend/workers/: broker.py  callbacks.py  dependencies.py
database/migrations/: env.py
database/seeds/: initial_data.sql
docs/: api_spec.yaml  architecture.md  deployment.md  runbook.md  taskiq_guide.md
docs/adr/: 001-vector-store-choice.md  002-llm-selection.md  003-taskiq-over-celery.md
infra/: docker-compose.dev.yml  docker-compose.prod.local.yml  docker-compose.prod.yml
infra/docker/: Dockerfile  Dockerfile.backend  Dockerfile.base  Dockerfile.worker  docker-compose.yml
infra/monitoring/: promtail-config.yml
infra/nginx/: nginx.conf
knowledge_base/: README.md
orchestration/monitoring/: n8n_health_check.py
scripts/: deploy-local.sh  deploy.sh  index_knowledge_base.py  migrate.sh  setup.sh  test.sh
slack_app/: manifest.yaml
slack_app/blocks/: approval_modal.json  draft_card.json  status_message.json
slack_app/handlers/: __init__.py  events.py  interactions.py  slash_commands.py
slack_app/utils/: __init__.py  block_builder.py
(+77 files in other folders)
