[tool.poetry]
name = "seratonin-script"
version = "0.1.0"
description = "AI Medical Content Generator"
authors = ["Admin <PyDevDeep>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.11,<3.14"
fastapi = "^0.130.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.41"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.2"
taskiq = "^0.12.1"
taskiq-redis = "^1.2.2"
qdrant-client = "^1.17.1"
structlog = "^25.5.0"
llama-index-core = "^0.14.19"
llama-index-readers-file = "^0.6.0"
pymupdf = "^1.27.2"
llama-index-embeddings-openai = "^0.6.0"
llama-index-vector-stores-qdrant = "^0.10.0"
fastembed = "^0.8.0"
llama-index-llms-anthropic = "^0.11.2"
llama-index-llms-openai = "^0.7.5"
httpx = "^0.28.1"
llama-index-readers-web = "^0.6.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = ">=0.9.5"
pyright = ">=1.1.400"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning"
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "venv", ".venv", "__pycache__", "build", "dist",
    "logs", "automation", ".pytest_cache", "htmlcov", ".coverage"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["backend"]
exclude = ["**/node_modules", "**/.*", "**/__pycache__", "build", "dist", "venv", ".venv"]
pythonVersion = "3.13.11"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true